Fix text overflowed

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -210,7 +210,7 @@ span.heading-s.user-name { font-size: clamp(1.2rem, 5vw, 1.8rem); margin-top: 13
 .preview-page .links .link-illustration-item .app-font-icon.icon-arrow-right {margin-inline-start: auto;transition: 0.4s ease-out;}
 .preview-page .links .link-illustration-item:hover .arrow-icon {transform: translateX(5px);}
 
-.preview-page span.heading-s.user-name {font-size: 3.2rem;margin: unset;color: #333333;font-weight: 800;white-space: nowrap;}
+.preview-page span.heading-s.user-name {font-size: 3.2rem;margin: unset;color: #333333;font-weight: 800;}
 .preview-page .user-email {display: block;}
 .preview-page .user-avatar {margin-bottom:25px;}
 .preview-page .user-avatar img{width: 100px;height: 100px;border-radius: 50%;object-fit: cover;border: 4px solid var(--purple-bold);margin-inline: auto;}
